# korpusi

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose-no-caddy.yml  docker-compose.dev.yml  docker-compose.yml  dump.sh  elasticvue.json  import.sh
pipeline/: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Pipfile  README.md  config.py  corpus.py  create_corpus.py  extract_voice.md  generate_mapping.py  helpers.py  ingest.py  ingest.yaml.example  preprocess.py  pyproject.toml  requirements.txt  upload.py  upload.yaml.example  vamp-1.1.0-cp310-cp310-linux_x86_64.whl
pipeline/processors/: audio_processors.py  base_processor.py  basic_processors.py  contour_processor.py  metadata_processors.py  musicxml_processor.py  processor.py  test_processor.py
pipeline/tests/: test.csv  test.musicxml  test_advanced_processors.py  test_audio_processors.py  test_metadata_processors.py  test_processors.py
pipeline/tests/__snapshots__/: test_advanced_processors.ambr  test_audio_processors.ambr  test_processors.ambr
web-app/: .env.example  .eslintrc.js  .gitignore  .prettierignore  Dockerfile  instrument.server.mjs  package.json  tsconfig.json
web-app/app/: cookies.server.ts  entry.client.tsx  entry.server.tsx  i18n.ts  i18next.server.ts  root.tsx
web-app/app/components/: ContourGraph.tsx  InfoCard.tsx  Layout.tsx  MAccordion.tsx  MarkdownLinkRenderer.tsx  NGramHistogram.tsx  NGramHistogramGraph.tsx  Navigation.tsx  OSMD.tsx  OSMDMeasures.tsx
web-app/app/routes/: _index.tsx  about.tsx  audio.$id.tsx  compare.tsx  search.compare.tsx  search.tsx  (+4 more)
(+82 files in other folders)
